.provarCaches/00D5f000005vwGkEAI/objects/rstkf__aragingDeleteFromHeroku__c.object
<CustomObject>
    <description>aragingDeleteFromHeroku</description>
    <fields>
        <fullName>rstkf__araging_id_to_delete__c</fullName>
        <description>araging_id_to_delete</description>
        <label>araging_id_to_delete</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__aragingd_id_to_delete__c</fullName>
        <description>aragingd_id_to_delete__c</description>
        <label>aragingd_id_to_delete</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__trialbalcalc_id_to_delete__c</fullName>
        <description>trialbalcalc_id_to_delete__c</description>
        <label>trialbalcalc_id_to_delete</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>aragingDeleteFromHeroku</label>
    <nameField>
        <label>aragingDeleteFromHeroku Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aragingDeleteFromHeroku</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>